--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <h1 class="welcome">Welcome</h1>
 
-<div class="stuff">
+<div class="stuff box-shadow center">
    
-    <p>Blah blah blah blah</p>
+    Blah blah blah blah blah blah blah blah blah blah blah blah blah
    
 </div>
     
