--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <title>Amazing Web Page</title>
 </head>
+
 <body>
 
 <!-- Navbar -->
@@ -22,7 +23,7 @@
 <!-- End Navbar -->
 
 
-<div>
+<div class=""forest-bg">
     <img src="resources/images/plant-lady.jpg" height="640" length="480" class="center-photo img" alt="lady in plants">
 </div>
 
